# asecoin-wallet

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.autosave  CryptoNoteWallet.cmake
src/CryptoNoteWrapper/: CryptoNoteAdapter.cpp
src/Gui/AddressBook/: AddressBookDelegate.cpp.bak.bak  AddressBookDelegate.h.bak  AddressBookFrame.cpp.bak.bak  AddressBookFrame.h.bak  DonationColumnDelegate.cpp.bak.bak  DonationColumnDelegate.h.bak.bak  NewAddressDialog.cpp.bak.bak  NewAddressDialog.h.bak.bak
src/Gui/BlockchainExplorer/: BlockDetailsDialog.cpp.bak.bak  BlockDetailsDialog.h.bak  BlockExplorerFrame.cpp.bak.bak  BlockExplorerFrame.h.bak.bak  FilteredBlockModel.cpp.bak  FilteredBlockModel.h.bak.bak  TransactionsBlockModel.cpp.bak  TransactionsBlockModel.h.bak  WindowedBlockModel.cpp.bak.bak  WindowedBlockModel.h.bak.bak
src/Gui/Common/: AboutDialog.cpp.bak  AboutDialog.h.bak.bak  AboutDialog.ui.bak  AddressBookDialog.cpp.bak.bak  AddressBookDialog.h.bak.bak  BlockchainInstaller.cpp.bak  BlockchainInstaller.h.bak  ChangePasswordDialog.cpp.bak.bak  ChangePasswordDialog.h.bak  ClearableLineEdit.cpp.bak  ClearableLineEdit.h.bak.bak  CopyColumnDelegate.cpp.bak.bak  CopyColumnDelegate.h.bak  CopyMagicLabel.cpp.bak.bak  CopyMagicLabel.h.bak.bak  ExitWidget.cpp.bak.bak  ExitWidget.h.bak.bak  ExitWidget.ui.bak  GlassFrame.cpp.bak.bak  GlassFrame.h.bak  KeyDialog.cpp.bak.bak  KeyDialog.h.bak  LinkLikeColumnDelegate.cpp.bak  LinkLikeColumnDelegate.h.bak.bak  MagicLabel.cpp.bak  MagicLabel.h.bak.bak  NewPasswordDialog.cpp.bak  NewPasswordDialog.h.bak  NewTransactionDelegate.cpp.bak  NewTransactionDelegate.h.bak  NewsFrame.cpp.bak.bak  NewsFrame.h.bak.bak  P2pBindPortErrorDialog.cpp.bak.bak  P2pBindPortErrorDialog.h.bak.bak  PoolTransactionDetailsDialog.cpp.bak.bak  PoolTransactionDetailsDialog.h.bak.bak  QuestionDialog.cpp.bak  QuestionDialog.h.bak.bak  ResizableScrollArea.cpp.bak.bak  ResizableScrollArea.h.bak.bak  (+34 more)
src/Gui/MainWindow/: MainWindow.cpp.bak.bak  MainWindow.h.bak.bak  MainWindow.ui.bak  WalletStatusBar.cpp.bak  WalletStatusBar.h.bak.bak
src/Gui/Mining/: MinerDelegate.cpp.bak  MinerDelegate.h.bak  MiningFrame.cpp.bak  MiningFrame.h.bak  PoolHeaderView.cpp.bak.bak  PoolHeaderView.h.bak.bak  PoolTreeView.cpp.bak  PoolTreeView.h.bak.bak
src/Gui/NoWallet/: NoWalletFrame.cpp.bak  NoWalletFrame.h.bak  NoWalletFrame.ui.bak
src/Gui/Options/: ConnectionOptionsFrame.cpp.bak  ConnectionOptionsFrame.h.bak  ConnectionOptionsFrame.ui.bak  DonationAddressesModel.cpp.bak.bak  DonationAddressesModel.h.bak  DonationOptionsFrame.cpp.bak  DonationOptionsFrame.h.bak  DonationOptionsFrame.ui.bak  IOptionsPage.h.bak.bak  OptimizationOptionsFrame.cpp.bak.bak  OptimizationOptionsFrame.h.bak.bak  OptionsDialog.cpp.bak.bak  OptionsDialog.h.bak.bak  PrivacyFrame.cpp.bak.bak  PrivacyFrame.h.bak  PrivacyFrame.ui.bak.bak
src/Gui/Overview/: OverviewFrame.cpp.bak.bak  OverviewFrame.h.bak  OverviewHeaderFrame.cpp.bak.bak  OverviewHeaderFrame.h.bak.bak  OverviewHeaderGlassFrame.cpp.bak  OverviewHeaderGlassFrame.h.bak.bak  OverviewTransactionPoolModel.cpp.bak.bak  OverviewTransactionPoolModel.h.bak.bak  OverviewTransactionPoolTreeView.cpp.bak  OverviewTransactionPoolTreeView.h.bak.bak  RecentTransactionsModel.cpp.bak  RecentTransactionsModel.h.bak.bak
src/Gui/Send/: SendFrame.cpp.bak.bak  SendFrame.h.bak  SendGlassFrame.cpp.bak.bak  SendGlassFrame.h.bak.bak  TransferFrame.cpp.bak.bak  TransferFrame.h.bak.bak
src/Gui/Transactions/: DrawableTransfersModel.cpp.bak  DrawableTransfersModel.h.bak.bak  FilteredByAddressTransactionsModel.cpp.bak.bak  FilteredByAddressTransactionsModel.h.bak.bak  FilteredByAgeTransactionsModel.cpp.bak.bak  FilteredByAgeTransactionsModel.h.bak  FilteredByHashTransactionsModel.cpp.bak.bak  FilteredByHashTransactionsModel.h.bak.bak  FilteredByPeriodTransactionsModel.cpp.bak.bak  FilteredByPeriodTransactionsModel.h.bak.bak  FilteredTransactionsModel.cpp.bak.bak  FilteredTransactionsModel.h.bak  TransactionTransfersRenderer.cpp.bak.bak  TransactionTransfersRenderer.h.bak  TransactionsDelegate.cpp.bak.bak  TransactionsDelegate.h.bak.bak  TransactionsFrame.cpp.bak  TransactionsFrame.h.bak.bak
src/Settings/: Settings.cpp
